--- a/style.css
+++ b/style.css
@@ -1,14 +1,103 @@
+@font-face {
+    font-family: freight;
+    src: url('FreightBigProLight-Italic.woff2');
+}
+@font-face {
+    font-family:helvit;
+    src: url('HelveticaNowDisplay-Medium.woff2');
+}
 *{
     margin:0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: freight;
 }
 html,body{
     width: 100%;
     height: 100%;
+    position: relative;
+}
+#nav{
+    width: 100%;
+    height: 50px;
+    padding: 0.5vw 4vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    z-index: 2;
+    /* background-color: red; */
+}
+#nav svg{
+    width: 100px;
+    height: 100px;
+}
+#loader{
+    width: 100%;
+    height: 100vh;
+    /* background-color: yellow; */
+    position: absolute;
+    z-index: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#loader video{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    z-index: 6;
+}
+#yellow1{
+    width: 100%;
+    height: 100vh;
+    background-color: yellow;
+    position: absolute;
+    z-index: 7;
+}
+/* #yellow2{
+    width: 100%;
+    height: 100vh;
+    background-color: green;
+    position: absolute;
+    y:-800px;
+    z-index: 7;
+} */
+#loader h1{
+    width: 75%;
+    text-align: center;
+    font-size: 4vw;
+    line-height: 4vw;
+    font-weight: 200;
+    position: absolute;
+    color: white;
+    z-index: 8;
 }
 #main{
+    display: none;
+}
+#page1{
     width: 100%;
-    min-height: 100%;
+    height: 100vh;
+    background-color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#page1 h1{
+    width: 75%;
+    text-align: center;
+    font-size: 4vw;
+    line-height: 4vw;
+    font-weight: 200;
+}
+#page2{
+    width: 100%;
+    height: 100vh;
     background-color: black;
+}
+#page3{
+    width: 100%;
+    height: 100vh;
+    background-color: white;
 }
