--- a/style.css
+++ b/style.css
@@ -94,8 +94,91 @@ html,body{
 #page2{
     width: 100%;
     height: 100vh;
-    background-color: black;
+    /* background-color: black; */
+    background-image: url('https://i.pinimg.com/736x/0f/69/39/0f6939ca4e265db250f2598a4679f4b9.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
+
+.ele{
+    width: 100%;
+    /* background-color: red; */
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    cursor: pointer;
+    pointer-events: all;
+}
+.ele > #yellow{
+    width: 18vw;
+    height:25px;
+    background-color: yellow;
+    position: absolute;
+    z-index: 10;
+    top:50%;
+    left:40%;
+    opacity: 0;
+    /* filter: blur(2px); */
+    transition: all ease .5s;
+}
+.ele > h1{
+    font-size: 6vw;
+    color: rgb(1, 1, 92);
+    z-index: 10;
+    position: relative;
+    line-height: 5vw;
+    text-transform: uppercase;
+}
+.moving{
+    width: 100%;
+    background-color: yellow;
+    padding: .2vw .5vw;
+    white-space: nowrap;
+    position: absolute;
+    top:50%;
+    transform: scaleY(0);
+    transition: all ease .5s;
+}
+.moving .moving_in{
+  /* background-color: blue; */
+  display: inline-block;
+  animation-name: moving;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+.moving .moving_in h1{
+    display: inline-block;
+    font-family: serif;
+    margin-right: 1vw;
+    text-transform: capitalize;
+    font-size: 16px;
+}
+
+@keyframes moving {
+    from{
+        transform: translateX(0%);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+}
+
+.ele:hover  .moving{
+    transform: scaleY(1);
+}
+.ele:hover  #heading{
+    color:black;
+}
+.ele:hover #yellow{
+    opacity: 1;
+}
+
 #page3{
     width: 100%;
     height: 100vh;
