--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ html,body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    transition: all ease-in-out 0.5s;
 }
 
 .ele{
@@ -181,6 +182,54 @@ html,body{
 
 #page3{
     width: 100%;
-    height: 100vh;
     background-color: white;
+}
+
+#img_container{
+    width: 100%;
+    min-height: 100vh;
+    background-color: rgba(255, 166, 0, 0.112);
+    padding: 3vw 4vw;
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+#image{
+    width: 20vw;
+    height: 25vw;
+    overflow: hidden;
+    background-color: orange;
+    border-radius: 10px;
+    position: relative;
+    margin: .5vw;
+}
+#image img{
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    height: 100%;
+}
+#overlay{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.007);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top:0%;
+    left: 0%;
+}
+#overlay h1{
+    text-transform: capitalize;
+    text-align: center;
+    -webkit-text-stroke: yellow .2px;
+    opacity: 0;
+}
+#image:hover #overlay{
+    background-color: rgba(0, 0, 0, 0.795);
+}
+#image:hover #overlay h1{
+    opacity: 1;
 }
